fix: negative row and column dimensions, hints not showing

--- a/src/ProblemLayout/ProblemInput/GridInput.css
+++ b/src/ProblemLayout/ProblemInput/GridInput.css
@@ -21,6 +21,7 @@
 .matrix-container{
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
 }
 
 .matrix-bracket-left, .matrix-bracket-right{
